--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,12 +22,14 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:1.1.1"
     // alternatively, just ViewModel
     implementation "android.arch.lifecycle:viewmodel:1.1.1"
     // alternatively, just LiveData
     implementation "android.arch.lifecycle:livedata:1.1.1"
+    implementation 'com.android.support:design:28.0.0'
 
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 
